2002-09-12  Benjamin Kosnik  <bkoz@redhat.com>

	* libmath/Makefile.am (LIBTOOL): Use --tag CC always for this
	directory.
	* libmath/Makefile.in: Regenerate.
	* src/Makefile.am: Tweak comment.
	* src/Makefile.in: Regenerate.
	
	* config/locale/gnu/c_locale.h: Remove warnings.
	Inject __uselocale into __gnu_cxx.
	* config/locale/generic/c_locale.h: Match.
	
2002-09-11  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc (__convert_from_v): Remove.
	* config/locale/gnu/c_locale.h (__convert_from_v): Add.
	* config/locale/generic/c_locale.h (__convert_from_v): Add.	

2002-09-11  Paolo Carlini  <pcarlini@unitus.it>

        * include/bits/locale_facets.tcc (__convert_from_v):
        Use __uselocale instead of setlocale for glibc 2.3+.

2002-09-10  Benjamin Kosnik  <bkoz@redhat.com>

	* src/Makefile.am (sources): Edit.
	(target_sources): New.
	(target_sources_extra): New.
	* src/Makefile.in: Regenerate.
	* acinclude.m4: Set CCODECVT_CC. 
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* src/locale.cc: Move ctype definitions...
	* src/ctype.cc: ...here. New file. 
	* src/locale.cc: Move codecvt definitions...
	* src/codecvt.cc: ...here. 	
	* config/generic/codecvt_members.cc: ...and here. 	
	* config/gnu/codecvt_members.cc: ...and here. 		
	* include/bits/codecvt.h: Tweak.
	* include/bits/locale_facets: Tweak.

	* src/bitset.cc: Correct license text.
	* src/concept-inst.cc: Same.
	* src/strstream.cc: Same.
	* src/vterminate.cc: Same.	

2002-09-10  Gabriel Dos Reis  <gdr@soliton.integrable-solutions.net>

	* include/bits/stl_vector.h (vector<>): Don't use a name with
	different meanings before and after re-evaluation in the completed
	scope. 
	* include/bits/basic_string.h (basic_string<>): Likewise.
	* include/bits/stl_bvector.h (vector<bool>): Likewise.
	* include/bits/stl_deque.h (std): Likewise.
	* include/bits/stl_list.h (list<>): Likewise.
	* include/bits/stl_tree.h (_Rb_tree<>): Likewise.

2002-09-10  Paolo Carlini  <pcarlini@unitus.it>
