@@ -166,8 +166,8 @@
       <p>The libstdc++ project is contributed to by several developers
          all over the world, in the same way as GCC or Linux.
          Benjamin Kosnik, Gabriel Dos Reis, Phil Edwards, Ulrich Drepper, 
-	 Loren James Rittle, and Paolo Carlini are the lead maintainers of 
-	 the CVS archive.
+         Loren James Rittle, and Paolo Carlini are the lead maintainers of 
+         the CVS archive.
       </p>
       <p>Development and discussion is held on the libstdc++ mailing
          list.  Subscribing to the list, or searching the list
@@ -642,8 +642,8 @@ New:
       </p>
       <p><a name="4_4_iostreamclear"><strong>reopening a stream fails</strong>
          </a> Did I just say that -Weffc++ was our biggest false-bug report?
-	 I lied.  (It used to be.)  Today it seems to be reports that after
-	 executing a sequence like
+         I lied.  (It used to be.)  Today it seems to be reports that after
+         executing a sequence like
       </p>
       <pre>
     #include &lt;fstream&gt;
@@ -715,23 +715,23 @@ http://clisp.cons.org/~haible/gccinclude-glibc-2.2-compat.diff
          requires a separate patch for libstdc++-v3.
       </p>
       <p><a name="4_4_checks"><strong>concept checks</strong></a>
-	 If you see compilation errors containing messages about
-	 <code> <em>foo</em>Concept </code>and a<code> constraints </code>
-	 member function, then most likely you have violated one of the
-	 requirements for types used during instantiation of template
-	 containers and functions.  For example, EqualityComparableConcept
-	 appears if your types must be comparable with == and you have not
-	 provided this capability (a typo, or wrong visibility, or you
-	 just plain forgot, etc).
+         If you see compilation errors containing messages about
+         <code> <em>foo</em>Concept </code>and a<code> constraints </code>
+         member function, then most likely you have violated one of the
+         requirements for types used during instantiation of template
+         containers and functions.  For example, EqualityComparableConcept
+         appears if your types must be comparable with == and you have not
+         provided this capability (a typo, or wrong visibility, or you
+         just plain forgot, etc).
       </p>
       <p>More information, including how to optionally enable/disable the
-	 checks, is available
-	 <a href="../19_diagnostics/howto.html#3">here</a>.
+         checks, is available
+         <a href="../19_diagnostics/howto.html#3">here</a>.
       </p>
       <p><a name="4_4_dlsym"><strong>dlopen/dlsym</strong></a>
-	 If you are using the C++ library across dynamically-loaded
-	 objects, make certain that you are passing the correct options
-	 when compiling and linking:
+         If you are using the C++ library across dynamically-loaded
+         objects, make certain that you are passing the correct options
+         when compiling and linking:
       </p>
       <pre>
     // compile the library components
